--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-widget-tweaks==1.4.12
 gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 sqlparse==0.4.2
 whitenoise==6.2.0
